@@ -454,6 +454,31 @@ class TestSubmitValidation:
         submit = submit.__class__(submit.stagename)
         assert not mapp.get_release_paths("pkg5")
 
+    def test_upload_twice_to_nonvolatile(self, submit, testapp, mapp):
+        mapp.modify_index(submit.stagename, indexconfig=dict(volatile=False))
+        metadata = {"name": "Pkg5", "version": "2.6", ":action": "submit"}
+        submit.metadata(metadata, code=200)
+        submit.file("pkg5-2.6.tgz", b"123", {"name": "Pkg5"}, code=200)
+        path1, = mapp.get_release_paths("Pkg5")
+        testapp.xget(200, path1)
+        # we now try to upload a different file which should fail
+        r = submit.file("pkg5-2.6.tgz", b"1234", {"name": "Pkg5"}, code=409)
+        assert '409 pkg5-2.6.tgz already exists in non-volatile index' in r.text
+        # if we upload the same file as originally, then it's a no op
+        r = submit.file("pkg5-2.6.tgz", b"123", {"name": "Pkg5"}, code=200)
+        assert '200 Upload of identical file to non volatile index.' in r.text
+        path2, = mapp.get_release_paths("Pkg5")
+        # check that nothing changed
+        assert path1 == path2
+        r = testapp.xget(200, path2)
+        assert r.body == b'123'
+        r = testapp.xget(200, "%s/Pkg5/2.6" % mapp.api.index)
+        link, = r.json['result']['+links']
+        log1, = link['log']
+        assert sorted(log1.keys()) == ['dst', 'what', 'when', 'who']
+        assert log1['what'] == 'upload'
+        assert log1['who'] == 'user'
+        assert log1['dst'] == 'user/dev'
 
     def test_upload_twice_to_volatile(self, submit, testapp, mapp):
         metadata = {"name": "Pkg5", "version": "2.6", ":action": "submit"}
