@@ -1,6 +1,10 @@
 2.1.4.dev
 ----------------
 
+- When uploading an existing version to a non-volatile index, it's now a
+  no op instead of an error if the content is identical. If the content is
+  different, it's still an error.
+
 - added code to allow filtering on packages with stable version numbers.
 
 - Change nginx template to set the X-outside-url header based on the
